--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 
             </div>
 
+            <span class="contact">
+                <a href="https://dany-cervantes-portfolio.pages.dev/" target="_blank" >
+                  Visit my portfolio
+                </a>
+              </span>
+
         </main>
         
         <script src="colors.js"></script>
