--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
             <div class="sign">
 
-                <div id="first">Eat</div> 
-                <div id="second">At</div>
-                <div id="third">Joe's</div>
+                <div id="first">This</div> 
+                <div id="second">Then</div>
+                <div id="third">That</div>
 
             </div>
 
