--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <main class="main">
 
-            <div class="sign">
+            <div class="center">
 
                 <div id="first">This</div> 
                 <div id="second">Then</div>
