--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
             <div class="upper-half">
 
                 <div class="upper-left">
-                    <button class="upper-rewind">
-                        -
-                    </button>
+                    <div class="upper-rewind"></div>
                 </div>
 
                 <div class="upper-right">
-                    <button class="upper-forward">
-                        +
-                    </button>
+                    <div class="upper-forward-horizontal"></div>
+                    <div class="upper-forward-vertical"></div>
                 </div>
 
             </div>
@@ -42,26 +39,21 @@
             <div class="lower-half">
 
                 <div class="lower-left">
-                    <button class="lower-rewind">
-                        -
-                    </button>
+                    <div class="lower-rewind"></div>
                 </div>
 
                 <div class="lower-right">
-                    <button class="lower-forward">
-                        +
-                    </button>
+                    <div class="lower-forward-horizontal"></div>
+                    <div class="lower-forward-vertical"></div>
                 </div>
 
             </div>
 
-            <span class="contact">
-
+            <div class="contact">
                 <a href="https://dany-cervantes-portfolio.pages.dev/" target="_blank" >
                   Visit my portfolio
                 </a>
-
-            </span>
+            </div>
 
         </main>
         
