--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
             <div class="center"> 
 
-                <div id="upper"></div> 
+                <div class="upper"></div> 
                    
-                <div id="middle">pause</div>
+                <div class="middle">pause</div>
 
-                <div id="lower"></div>
+                <div class="lower"></div>
 
             </div>
 
