--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 
         </main>
         
-        <script src="colors.js"></script>
+        <script type="text/javascript" src="colors.js"></script>
     </body>
 </html>
